@@ -1491,13 +1491,11 @@ Using the Cygnus tools, this approach works:
     <a href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/include/makeinclude/platform_vxworks5.5.x.GNU">the
     g++/VxWorks platform file</a> for more information.<p>
   </p></li><li>Create an <code>ACE_wrappers/ace/config.h</code> file that looks
-    something like the following.  tao_idl should be built to not support
-    native exception handling, because that's not available on VxWorks.
+    something like the following. 
 <pre>#if defined (_MSC_VER)  ||  defined (__BORLANDC__)
 # include "ace/config-win32.h"
-# undef ACE_HAS_EXCEPTIONS
 #else
-# include "ace/config-vxworks.h"
+# include "ace/config-vxworks5.x.h"
 #endif
 </pre><p>
    </p></li><li>Set your <code>ACE_ROOT</code>, <code>CPP_LOCATION</code>,
@@ -1688,10 +1686,9 @@ Control Panel-&gt; System -&gt; Environment)</p>
 <p>with entry</p>
 <p>#if defined (_MSC_VER) || (__BORLANDC__)</p>
 <p>     #include "ace/config-win32.h"</p>
-<p>     #undef ACE_HAS_EXCEPTIONS</p>
 <p>#else</p>
-<p>     #include "ace/config-vxworks5.x.h"</p>
 <p>     #define ACE_HAS_IP_MULTICAST </p>
+<p>     #include "ace/config-vxworks5.x.h"</p>
 <p>#endif</p>
 
 <p>2) C:\Corba\ACE_wrappers\include\makeinclude\platform_macros.GNU</p>
